create page remove profile picture static profile picture add border profile picture

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
   <div id="container">
     <div id="profile">
-      <img src="./assets/avatar.png" alt="Foto de Gabriel" />
+      <img src="https://github.com/Gabriel-Sousa.png" alt="Foto de Gabriel" />
       <p>@Gabriel-Sousa</p>
     </div>
 
@@ -31,15 +31,15 @@
       </li>
 
       <li>
-        <a href="#">Baixar meu e-book</a>
+        <a href="#">Link 2</a>
       </li>
 
       <li>
-        <a href="">Ver meu portfólio</a>
+        <a href="https://github.com/Gabriel-Sousa">Ver meu portfólio</a>
       </li>
 
       <li>
-        <a href="" target="_blank">Conheça o Explorer</a>
+        <a href="#">Conheça o Explorer</a>
       </li>
     </ul>
     <div id="social-links">
