--- a/index.html
+++ b/index.html
@@ -47,15 +47,15 @@
         <ion-icon name="logo-github"></ion-icon>
       </a>
 
-      <a href="https://instagram.com/Gabriel-Sousa" target="_blank">
+      <a href="#" target="_blank">
         <ion-icon name="logo-instagram"></ion-icon>
       </a>
 
-      <a href="https://youtube.com/Gabriel-Sousa" target="_blank">
+      <a href="#" target="_blank">
         <ion-icon name="logo-youtube"></ion-icon>
       </a>
 
-      <a href="https://linkedin.com/in/Gabriel-Sousa" target="_blank">
+      <a href="#" target="_blank">
         <ion-icon name="logo-linkedin"></ion-icon>
       </a>
     </div>
